# toolstack

./: .gitignore  README.md  SECURITY.md
broker/: .gitignore  PLAN.md  README.md  pyproject.toml
broker-panel/: README.md  pyproject.toml
broker-panel/src/broker_panel/: __init__.py  app.py  client.py  config.py  security.py
broker-panel/tests/: test_app.py
broker/docs/: manual-testing.md
broker/policies/profiles/: approver.yaml  home-default.yaml  readonly.yaml  registry-admin.yaml
broker/src/broker/: __init__.py  api.py  approval.py  audit.py  cli.py  config.py  db.py  dispatch.py  lifecycle.py  models.py  policy.py  registry.py  signing.py  timeouts.py  tokens.py  toolyard_client.py
broker/tests/: conftest.py  test_api.py  test_approval.py  test_audit.py  test_cli.py  test_config.py  test_db.py  test_dispatch.py  test_lifecycle.py  test_policy.py  test_registry.py  test_timeouts.py  test_tokens.py
discord-approver/: .gitignore  PLAN.md  README.md  pyproject.toml
discord-approver/docs/: manual-testing.md
discord-approver/scaffolding/: README.md
discord-approver/src/discord_approver/: __init__.py  bot.py  broker_client.py  cli.py  config.py  embed.py  models.py  reconciler.py  signing.py  state.py
discord-approver/src/discord_approver/scaffolding/: __init__.py  fake_broker.py
discord-approver/tests/: conftest.py  test_bot_auth.py  test_broker_client.py  test_config.py  test_embed.py  test_reconciler.py  test_state.py
docs/: README.md  end-to-end-testing.md  trust-agents-with-action-not-access.md  user-guide.md
docs/deployment/: README.md
docs/deployment/caddy/: broker.caddy
docs/deployment/env/: broker-panel.env.example  broker.env.example  (+2 more)
docs/design/: 00-principles.md  01-architecture.md  10-broker.md  20-toolyard.md  21-tool-template.md  22-agent-skill-convention.md  30-approver-discord.md  40-secrets.md  50-migration.md
docs/history/: README.md  broker-implementation-plan.md  discord-approver-implementation-plan.md  toolyard-implementation-plan.md
lib/op-connect-shim/: README.md  op-connect-shim.env.example  op_connect_shim.py
tools/hello-rest/: Dockerfile  app.py  toolyard.yaml
tools/time-mcp/: Dockerfile  app.py  toolyard.yaml
toolyard/: .gitignore  PLAN.md  README.md  pyproject.toml
toolyard/docs/: manual-testing.md
toolyard/src/toolyard/: __init__.py  audit.py  broker_reload.py  cli.py  config.py  control.py  daemon.py  docker_driver.py  healthcheck.py  lifecycle.py  models.py  registry.py  schema.py  secrets.py  write_proxy.py
toolyard/src/toolyard/container/: wait-for-secrets.sh
toolyard/tests/: conftest.py  test_broker_reload.py  test_cli.py  test_config.py  test_control.py  test_docker_driver.py  test_healthcheck.py  test_lifecycle.py  test_registry.py  test_schema.py  test_secrets.py  test_write_proxy.py
(+10 files in other folders)
