[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-approver"
version = "0.1.0"
description = "Discord bot that bridges a broker's pending-approval queue to a human on Discord"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
discord-approver = "discord_approver.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
