[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolyard"
version = "0.1.0"
description = "Docker-based tool lifecycle runner for the toolserver system"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
toolyard = "toolyard.cli:main"
toolyardd = "toolyard.daemon:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that require a local Docker daemon",
]

[tool.setuptools.package-data]
toolyard = ["container/*.sh"]
